# cpp-opengl-sandbox

./: .gitmodules  CMakeLists.txt  build.sh
.cache/clangd/index/: _fixes.hpp.DB4F503F1CE9A0AC.idx  _vectorize.hpp.6E6ABFA4605703ED.idx  application.cpp.890A6D4E7B15DAD6.idx  application.h.E10694A67CE9A935.idx  cmesh.cpp.F36B021D2FD3DA98.idx  cmesh.h.931CA580204648D7.idx  common.hpp.3F90A36945C9E736.idx  component.cpp.FAB0BE2418C2607B.idx  component.h.41209062F551F5CE.idx  compute_common.hpp.6655E84E0E032CA2.idx  compute_vector_relational.hpp.F3EFB53CB6423998.idx  constants.hpp.3D980EAC670A6B46.idx  constants.inl.71F0B19BFC7FD343.idx  context.c.D3D5BB9B57D5D371.idx  decl.h.209C2F6D875B4B31.idx  egl_context.c.E69EA107835DB2F6.idx  entity.cpp.3869B8E05C80963C.idx  entity.h.8B4B98F787857B31.idx  exponential.hpp.579F6CAEACAFFD3E.idx  func_common.inl.199222542070667A.idx  func_exponential.inl.97D3F1C905A5ECBA.idx  func_geometric.inl.1F2D957A617E1AAC.idx  func_integer.inl.47050D9F25AF09BD.idx  func_matrix.inl.B6208CF91E870BA4.idx  func_packing.inl.3A85A8B5574B1A82.idx  func_trigonometric.inl.9FB0D6C4DF381DB6.idx  func_vector_relational.inl.8727A4FE585C9897.idx  fwd.hpp.5BCDFB7FF379BC8D.idx  geometric.hpp.F8951A7A12056DB0.idx  glad.c.E459079A50422F45.idx  (+174 more)
include/glad/: glad.h
include/sandbox/: decl.h
include/scripts/: element.h  sand.h
res/: pixel_shader.glsl  vertex.glsl
src/: glad.c  main.cpp
src/components/: cmesh.cpp  mesh.cpp  rigidbody.cpp  transform.cpp
src/core/: application.cpp  component.cpp  entity.cpp  registry.cpp  renderer.cpp  shader.cpp
(+13 files in other folders)
